--- a/package.json
+++ b/package.json
@@ -10,38 +10,38 @@
     },
     "dependencies": {
         "@canvasjs/react-charts": "^1.0.2",
-        "@fortawesome/fontawesome-svg-core": "^6.6.0",
-        "@fortawesome/free-solid-svg-icons": "^6.6.0",
+        "@fortawesome/fontawesome-svg-core": "^6.7.2",
+        "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/react-fontawesome": "^0.2.2",
-        "@radix-ui/react-avatar": "^1.1.1",
-        "@radix-ui/react-icons": "^1.3.1",
-        "@vercel/analytics": "^1.3.2",
-        "avatar": "link:componenets/ui/avatar",
-        "axios": "^1.7.7",
-        "badge": "link:componenets/ui/badge",
-        "card": "link:componenets/ui/card",
-        "chart.js": "^4.4.6",
-        "class-variance-authority": "^0.7.0",
+        "@radix-ui/react-avatar": "^1.1.7",
+        "@radix-ui/react-icons": "^1.3.2",
+        "@vercel/analytics": "^1.5.0",
+        "avatar": "link:componenets\\ui\\avatar",
+        "axios": "^1.9.0",
+        "badge": "link:componenets\\ui\\badge",
+        "card": "link:componenets\\ui\\card",
+        "chart.js": "^4.4.9",
+        "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.454.0",
         "next": "15.0.2",
         "react": "^18.3.1",
-        "react-bootstrap": "^2.10.5",
-        "react-chartjs-2": "^5.2.0",
+        "react-bootstrap": "^2.10.9",
+        "react-chartjs-2": "^5.3.0",
         "react-charts": "3.0.0-beta.57",
         "react-dom": "^18.3.1",
-        "tailwind-merge": "^2.5.4",
+        "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
-        "@types/node": "^22.8.7",
-        "@types/react": "^18.3.12",
-        "@types/react-dom": "^18.3.1",
-        "autoprefixer": "^10.4.20",
-        "eslint": "^9.14.0",
+        "@types/node": "^22.15.3",
+        "@types/react": "^18.3.20",
+        "@types/react-dom": "^18.3.7",
+        "autoprefixer": "^10.4.21",
+        "eslint": "^9.26.0",
         "eslint-config-next": "15.0.2",
-        "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.14",
-        "typescript": "^5.6.3"
+        "postcss": "^8.5.3",
+        "tailwindcss": "^3.4.17",
+        "typescript": "^5.8.3"
     }
 }
