chore: bump caniuse

--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
         "@radix-ui/react-avatar": "^1.1.7",
         "@radix-ui/react-icons": "^1.3.2",
         "@vercel/analytics": "^1.5.0",
-        "avatar": "link:componenets\\ui\\avatar",
+        "avatar": "link:componenets/ui/avatar",
         "axios": "^1.9.0",
-        "badge": "link:componenets\\ui\\badge",
-        "card": "link:componenets\\ui\\card",
+        "badge": "link:componenets/ui/badge",
+        "card": "link:componenets/ui/card",
         "chart.js": "^4.4.9",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
