--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.13",
         "@types/node": "^22.15.3",
         "@types/react": "^18.3.20",
         "@types/react-dom": "^18.3.7",
@@ -41,7 +42,7 @@
         "eslint": "^9.26.0",
         "eslint-config-next": "15.0.2",
         "postcss": "^8.5.3",
-        "tailwindcss": "^3.4.17",
+        "tailwindcss": "^4.1.12",
         "typescript": "^5.8.3"
     }
 }
