--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.13",
         "@types/node": "^24.3.0",
         "@types/react": "^19.1.12",
         "@types/react-dom": "^19.1.9",
